--- a/dot/i3/config
+++ b/dot/i3/config
@@ -162,6 +162,7 @@ exec_always feh --bg-scale /home/lucamartinelli/Immagini/2.jpg
 exec_always compton --backend glx --vsync opengl
 exec xinput set-prop 11 279 1
 
+exec --no-startup-id dunst &
 exec caffeine-indicator
 exec blueman-applet 
 exec nm-applet
