--- a/dot/i3/i3-gaps-blocks.config
+++ b/dot/i3/i3-gaps-blocks.config
@@ -25,35 +25,29 @@
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
 command=/usr/share/i3blocks/$BLOCK_NAME
-separator_block_width=10
+separator_block_width=15
 markup=none
+
+# Volume indicator
+#
+# The first parameter sets the step (and units to display)
+# The second parameter overrides the mixer selection
+# See the script for details.
+[volume]
+label=VOL
+label=♪
+instance=Master
+instance=PCM
+interval=once
+signal=10
 
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
-#[memory]
-#label=RAM
-#color=#777777
-#separator=false
-#interval=30
-
-# Generic media player support
-#
-# This displays "ARTIST - SONG" if a music is playing.
-# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-[mediaplayer]
-#instance=spotify
-label=  🎵
-interval=1
-color=#ffb600
-signal=10
-
-# Spotify Block
-[spotify]
-label=  🎵
-command=python3 /usr/share/i3blocks/spotify.py
-color=#81b71a
-interval=1
+[memory]
+label=RAM
+separator=false
+interval=30
 
 # Disk usage
 #
@@ -61,8 +55,7 @@ interval=1
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-color=#dadee5
-label= home
+label=HOME
 #instance=/mnt/data
 interval=30
 
@@ -70,69 +63,50 @@ interval=30
 #
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
-
 [iface]
 #instance=wlan0
-color=#43cc1a
+color=#00FF00
 interval=10
 separator=true
-label=  🛸
-align=center 
-
-[battery]
-interval=1
-color=#dadee5
-label=  🔌
 
 # CPU usage
 #
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
-#[cpu_usage]
-#label=CPU
-#color=##dadee5
-#interval=5
-#min_width=CPU: 100.00%
-#separator=true
+[cpu_usage]
+label=CPU
+interval=5
+min_width=CPU: 100.00%
+separator=true
 
 #[load_average]
 #interval=10
 
+# Battery indicator
+#
+# The battery instance defaults to 0.
+[battery]
+label=BAT
+label=⚡
+#instance=1
+interval=1
+
 # Date Time
 #
-#[time]
-#label=  ⏳
-#command=date '+%H:%M'
-#color=#dadee5
-#interval=1
-#separator=false
-
-[calendar]
-interval=1
-color=#ffb600
-label= 
+[time]
 command=date '+%H:%M'
-# datefmt=+%H:%M:%S
-# SHORTFMT=+%H:%M:%S
-# height=180
-# width=220
+interval=1
+separator=true
 
-# Restart i3 on click
-# [restart]
-# full_text=poweroff
-# command=i3-msg -q restart
+# Generic media player support
+#
+# This displays "ARTIST - SONG" if a music is playing.
+# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
+#[mediaplayer]
+#instance=spotify
+#interval=5
+#signal=10
 
-[shutdown_menu]
-full_text=poweroff
-instance=poweroff
-command=/usr/share/i3blocks/shutdown-menu
-
-# [monitors]
-# full_text=MONITOR
-# command=python3 /usr/share/i3blocks/monitor-manager
-# interval=once
-
-#interval=0
 # Temperature
 #
 # Support multiple chips, though lm-sensors.
@@ -148,10 +122,10 @@ command=/usr/share/i3blocks/shutdown-menu
 #
 # bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 # bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
-[keyindicator]
-instance=CAPS
-interval=once
-signal=11
+#[keyindicator]
+#instance=CAPS
+#interval=once
+#signal=11
 
 #[keyindicator]
 #instance=NUM
